# Rust-Template

./: Cargo.toml  README.md  README.md.liquid  cargo-generate.toml  post-script.rhai  pre-script.rhai
src/: error.rs  prelude.rs
src/utils/: wrapper.rs
