[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.*", features = ["derive", "string"] }
reqwest = { version = "0.12.*", features = ["json"] }
rust-i18n = "3.1.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "2.0.*"
tokio = { version = "1.42.*", features = ["full"] }

